test/expected/declare_fneai.out
declare f as function ( x as non-empty array of int )
                        ^
25: error: "non-empty" requires an array dimension
